# hilopalace

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
palace/: db.sqlite3  manage.py
palace/palace/: asgi.py  settings.py  urls.py  wsgi.py
palace/theme/: views.py
palace/theme/static_src/: package-lock.json
palace/theme/templates/: base.html
